<resources>
    <string name="app_name">Dde_Na_Gae</string>


    <string name="logout">Logout</string>
    <string name="profile_picture">Profile Picture:</string>
    <string name="display_name">Display Name:</string>
    <string name="login_failed">Login failed.</string>
    <string name="email_text">Email:</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>



    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
</resources>