<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login_New_Page">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white"
            android:elevation="4dp" />

        <com.kakao.usermgmt.LoginButton
            android:id="@+id/kakaologin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_alignParentBottom="true" />
        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_margin="12dp"
            android:padding="0dp"
            android:layout_alignParentBottom="true"
            android:elevation="0dp"/>
        <LinearLayout
            android:id="@+id/logged_in_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"/>



            <TextView
                android:id="@+id/label_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_name"/>


            <TextView
                android:id="@+id/label_profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_picture"/>

            <ImageView
                android:id="@+id/profile_image_view"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>